# bdc

./: CMakeLists.txt  build.yml
bdc/: config.h.in
bdc/cli/: main.c
bdc/core/: checker.c  checker.h  client.c  client.h  config.c  config.h  core.h  handle.c  handle.h  hash_table.c  hash_table.h  log.c  log.h  macro.h  utils.c  utils.h  version.c  version.h
bdc/core/command/: cmd_gen.c  cmd_gen.h
cmake/: deps.cmake
dep_modules/: libxml2.yml  mugglec.yml
test/hash_table/: unittest_hash_table.cpp
